🖼️ Fixed product image references to match resized files

--- a/vault.html
+++ b/vault.html
@@ -270,7 +270,7 @@
   </div>
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-  <img src="images/momentum-toolkit.webp" alt="Momentum Mapping Toolkit" />
+  <img src="images/momentum-toolkit.png" alt="Momentum Mapping Toolkit" />
   <h3>Momentum Mapping Toolkit</h3>
   <p>Visual goal-tracking system to help creators build rhythm and finish what matters.</p>
   <a href="https://grafixartistry6.gumroad.com/l/npruu" class="cta-button">Only $19</a>
