🖼️ Fixed Vault Listing

--- a/vault.html
+++ b/vault.html
@@ -222,8 +222,8 @@
 <div class="product-grid">
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #e74c3c;">🔥 Top Seller</div>
-    <img src="images/focus_vault.png" alt="Focus Vault" />
-    <h3>Focus Vault</h3>
+    <img src="images/focus_vault.png" alt="Focus Vault – White Label Productivity Kit" />
+    <h3>Focus Vault – White Label Productivity Kit</h3>
     <p>Editable kit to launch your own productivity system. Canva slides + resale license included.</p>
     <a href="https://grafixartistry6.gumroad.com/l/xlbheu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
   </div>
