🖼️ Fixed Vault Listing

--- a/vault.html
+++ b/vault.html
@@ -297,34 +297,18 @@
 <section style="background-color: #e0f0ff; padding: 2rem; border-radius: 8px; margin-top: 2rem;">
   <h2 style="color: #005fa3; font-size: 1.8rem; margin-bottom: 1.5rem;">🚀 Coming Soon</h2>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
-    
-    <div style="background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem;">
+
+    <div style="background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 1px 5px rgba(0,0,0,0.05);">
       <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; display: block;">
       <div style="padding: 1rem;">
-        <h3 style="margin: 0; font-size: 1.1rem; color: #005fa3;">The 30-Day Product Sprint</h3>
-        <p style="margin: 0.5rem 0 0; color: #444;">Build a digital product in one month.</p>
+        <h3 style="margin: 0 0 0.25rem; font-size: 1.1rem; color: #005fa3;">The 30-Day Product Sprint</h3>
+        <p style="margin: 0; color: #555;">Build a digital product in one month.</p>
       </div>
     </div>
 
-    <div style="background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">
-      <img src="/images/resized_image_2.png" alt="AnchorStack Founding Affiliate Invite" style="width: 100%; display: block;">
-      <div style="padding: 1rem;">
-        <h3 style="margin: 0; font-size: 1.1rem; color: #005fa3;">Founding Affiliate Invite</h3>
-        <p style="margin: 0.5rem 0 0; color: #444;">Join the Stack. Earn with every share.</p>
-      </div>
-    </div>
+    <div s
 
-    <div style="background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 6px rgba(0,0,0,0.08);">
-      <img src="/images/resized_image_3.png" alt="The Calm Clarity Blueprint" style="width: 100%; display: block;">
-      <div style="padding: 1rem;">
-        <h3 style="margin: 0; font-size: 1.1rem; color: #005fa3;">The Calm Clarity Blueprint</h3>
-        <p style="margin: 0.5rem 0 0; color: #444;">Digital Clarity Kit by Clarity Press</p>
-      </div>
-    </div>
-
-  </div>
-</section>
 
 
 </div>
