🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -294,20 +294,30 @@
   <a href="https://grafixartistry6.gumroad.com/l/xtitiw" class="cta-button">Launch Price – $9</a>
 </div>
 
-<section style="background-color: #e0f0ff; padding: 2rem; border-radius: 8px; margin-top: 2rem;">
+<section style="margin-top: 2rem;">
   <h2 style="color: #005fa3; font-size: 1.8rem; margin-bottom: 1.5rem;">🚀 Coming Soon</h2>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1.5rem;">
-
-    <div style="background: #fff; border-radius: 8px; overflow: hidden; box-shadow: 0 1px 5px rgba(0,0,0,0.05);">
-      <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; display: block;">
-      <div style="padding: 1rem;">
-        <h3 style="margin: 0 0 0.25rem; font-size: 1.1rem; color: #005fa3;">The 30-Day Product Sprint</h3>
-        <p style="margin: 0; color: #555;">Build a digital product in one month.</p>
-      </div>
+  <div class="product-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
+    <div class="product-card">
+      <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
+      <h3>The 30-Day Product Sprint</h3>
+      <p>Build a digital product in one month.</p>
     </div>
+    <div class="product-card">
+      <img src="/images/resized_image_2.png" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
+      <h3>Founding Affiliate Invite</h3>
+      <p>Join the Stack. Earn with every share.</p>
+    </div>
+    <div class="product-card">
+      <img src="/images/resized_image_3.png" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
+      <h3>The Calm Clarity Blueprint</h3>
+      <p>Digital Clarity Kit by Clarity Press.</p>
+    </div>
+  </div>
+</section>
 
-    <div s
+
+   
 
 
 
