🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -292,9 +292,12 @@
 
 </p>
   <a href="https://grafixartistry6.gumroad.com/l/xtitiw" class="cta-button">Launch Price – $9</a>
-</div>
+</div> <!-- End of product-grid -->
 
+<!-- Now the Coming Soon section -->
 <section style="margin-top: 2rem;">
+  <h2 style="color: #005fa3;">🚀 Coming Soon</h2>
+  <div class="product-grid">
   <h2 style="color: #005fa3; font-size: 1.8rem; margin-bottom: 1.5rem;">🚀 Coming Soon</h2>
 
   <div class="product-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
@@ -317,12 +320,7 @@
 </section>
 
 
-   
-
-
-
-</div>
-
+  
   <!-- Substack Newsletter -->
   <section id="newsletter-signup" style="padding: 3rem 1rem; background-color: #f9f9f9; text-align: center;">
   <h2>📬 Subscribe for Tools & Updates</h2>
