🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -292,7 +292,7 @@
 
 </p>
   <a href="https://grafixartistry6.gumroad.com/l/xtitiw" class="cta-button">Launch Price – $9</a>
-</div> <!-- End of product-grid -->
+</div></div> <!-- End of product-grid -->
 
 <!-- Now the Coming Soon section -->
 <section style="margin-top: 2rem;">
