🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -162,6 +162,10 @@
   border-radius: 6px;
 }
 </style>
+<script src="https://gumroad.com/js/gumroad.js"></script>
+
+<script async src="https://substackapi.com/widget.js" defer></script>
+
 
 </head>
 <body>
@@ -294,27 +298,57 @@
   <a href="https://grafixartistry6.gumroad.com/l/xtitiw" class="cta-button">Launch Price – $9</a>
 </div></div> <!-- End of product-grid -->
 
-<!-- Now the Coming Soon section -->
+<!-- Coming Soon Section -->
 <section style="margin-top: 2rem;">
-  
   <h2 style="color: #005fa3; font-size: 1.8rem; margin-bottom: 1.5rem;">🚀 Coming Soon</h2>
 
   <div class="product-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
-    <div class="product-card">
+    
+    <div class="product-card" style="position: relative;">
+      <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
+        🚧 Coming Soon
+      </div>
       <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
       <h3>The 30-Day Product Sprint</h3>
       <p>Build a digital product in one month.</p>
+      <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
+        🔔 Notify Me
+      </button>
+      <noscript>
+        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+      </noscript>
     </div>
-    <div class="product-card">
+
+    <div class="product-card" style="position: relative;">
+      <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
+        🚧 Coming Soon
+      </div>
       <img src="/images/resized_image_2.png" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
       <p>Join the Stack. Earn with every share.</p>
+      <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
+        🔔 Notify Me
+      </button>
+      <noscript>
+        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+      </noscript>
     </div>
-    <div class="product-card">
+
+    <div class="product-card" style="position: relative;">
+      <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
+        🚧 Coming Soon
+      </div>
       <img src="/images/resized_image_3.png" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
       <h3>The Calm Clarity Blueprint</h3>
       <p>Digital Clarity Kit by Clarity Press.</p>
+      <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
+        🔔 Notify Me
+      </button>
+      <noscript>
+        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+      </noscript>
     </div>
+
   </div>
 </section>
 
