--- a/vault.html
+++ b/vault.html
@@ -13,6 +13,7 @@
 <meta property="og:image" content="https://anchorstack.pro/images/anchorstack-og-image.jpg" />
 <meta property="og:url" content="https://anchorstack.pro/vault" />
 <meta property="og:type" content="website" />
+
 <!-- Hotjar Tracking Code for https://anchorstack.pro -->
 <script>
     (function(h,o,t,j,a,r){
@@ -23,6 +24,16 @@
         r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
         a.appendChild(r);
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+
+    var userId = "Ricky Jarnagin";
+    window.hj('identify', userId, {
+      'User Name': 'Ricky Jarnagin',
+      'Role': 'Site Owner',
+      'Plan': 'All Access',
+      'Identified': true
+    });
+</script>
+
 <script>
   var userId = "Ricky Jarnagin";
   window.hj('identify', userId, {
