🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -322,9 +322,13 @@
       <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
       <h3>The 30-Day Product Sprint</h3>
       <p>Build a digital product in one month.</p>
-      <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
-        🔔 Notify Me
-      </button>
+      <a href="https://rickyjarnagin.substack.com/subscribe" 
+   data-substack-modal="subscribe" 
+   class="cta-button" 
+   style="margin-top: 0.75rem; background-color: #3498db;">
+  🔔 Notify Me
+</a>
+
       <noscript>
         <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
       </noscript>
@@ -337,9 +341,13 @@
       <img src="/images/resized_image_2.png" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
       <p>Join the Stack. Earn with every share.</p>
-     <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
+     <a href="https://rickyjarnagin.substack.com/subscribe" 
+   data-substack-modal="subscribe" 
+   class="cta-button" 
+   style="margin-top: 0.75rem; background-color: #3498db;">
   🔔 Notify Me
-</button>
+</a>
+
 
       <noscript>
         <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
@@ -353,13 +361,18 @@
       <img src="/images/resized_image_3.png" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
       <h3>The Calm Clarity Blueprint</h3>
       <p>Digital Clarity Kit by Clarity Press.</p>
-      <button class="cta-button" style="margin-top: 0.75rem; background-color: #3498db;" onclick="SubstackWidget.openPopup('rickyjarnagin.substack.com')">
-        🔔 Notify Me
-      </button>
+      <a href="https://rickyjarnagin.substack.com/subscribe" 
+   data-substack-modal="subscribe" 
+   class="cta-button" 
+   style="margin-top: 0.75rem; background-color: #3498db;">
+  🔔 Notify Me
+</a>
+
       <noscript>
         <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
       </noscript>
     </div>
+
 
   </div>
 </section>
