--- a/vault.html
+++ b/vault.html
@@ -328,10 +328,10 @@
    style="margin-top: 0.75rem; background-color: #3498db;">
   🔔 Notify Me
 </a>
+<noscript>
+  <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+</noscript>
 
-      <noscript>
-        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
-      </noscript>
     </div>
 
     <div class="product-card" style="position: relative;">
@@ -350,8 +350,16 @@
 
 
       <noscript>
-        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
-      </noscript>
+      <a href="https://rickyjarnagin.substack.com/subscribe" 
+   data-substack-modal="subscribe" 
+   class="cta-button" 
+   style="margin-top: 0.75rem; background-color: #3498db;">
+  🔔 Notify Me
+</a>
+<noscript>
+  <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+</noscript>
+
     </div>
 
     <div class="product-card" style="position: relative;">
@@ -367,10 +375,10 @@
    style="margin-top: 0.75rem; background-color: #3498db;">
   🔔 Notify Me
 </a>
+<noscript>
+  <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
+</noscript>
 
-      <noscript>
-        <a href="#newsletter-signup" class="cta-button" style="background-color: #3498db;">🔔 Notify Me</a>
-      </noscript>
     </div>
 
 
