🖼️ Added Coming Soon Section

--- a/vault.html
+++ b/vault.html
@@ -189,7 +189,10 @@
 
   <!-- Hero Section -->
   <section class="hero-section">
-    <img src="images/logo.png" alt="AnchorStack Logo" style="height: 130px;" />
+    <!-- swapped logo -->
+    <img src="/images/logo.png"
+         alt="AnchorStack Badge"
+         style="height: 130px; margin-bottom: 1rem;" />
 
     <h1 style="font-size: 2rem; margin-top: 1rem;">Unlock Your AnchorStack Vault</h1>
     <p style="font-size: 1.2rem; color: #555;">
@@ -308,6 +311,14 @@
 </p>
   <a href="https://grafixartistry6.gumroad.com/l/xtitiw" class="cta-button">Launch Price – $9</a>
 </div></div> <!-- End of product-grid -->
+
+ <!-- AnchorStack Vault Promo Panel -->
+  <section style="text-align: center; margin: 2rem 0;">
+    <img src="/images/promo.png"
+         alt="AnchorStack Vault — Creator Tools Without the Noise"
+         style="width: 100%; max-width: 900px; border-radius: 8px;" />
+  </section>
+
 
 <!-- Coming Soon Section -->
 <section style="margin-top: 2rem;">
