Compress and rename images to image.jpg

--- a/thank-you.html
+++ b/thank-you.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+ <!-- Favicon (Optional) -->
+<link rel="icon" href="/images/favicon.ico" type="image/png" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>You're In – 30-Day Focus Challenge</title>
