--- a/vault.html
+++ b/vault.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<!--Force Reload -->
   <!-- SEO & Social Meta Tags -->
 <meta name="description" content="Discover tools, templates, and clarity kits to help creators stay focused and productive. AnchorStack Vault gives you instant access to digital products designed to help you build and grow—without the noise." />
 <meta name="keywords" content="creator tools, digital products, clarity kits, productivity, anchorstack, notion dashboards, hustlemode, reset kits, focus tools, passive income, templates" />
@@ -80,7 +80,7 @@
 </style>
 
 <!-- Favicon (Optional) -->
-<link rel="icon" href="/images/favicon.png" type="image/png" />
+<link rel="icon" href="/images/favicon.ico" type="image/png" />
 
 <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -190,7 +190,7 @@
   <!-- Hero Section -->
   <section class="hero-section">
     <!-- swapped logo -->
-    <img src="/images/logo.png"
+    <img src="images/logo.jpg"
          alt="AnchorStack Badge"
          style="height: 130px; margin-bottom: 1rem;" />
 
@@ -240,7 +240,7 @@
 <div class="product-grid">
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #e74c3c;">🔥 Top Seller</div>
-    <img src="images/focus_vault.png" alt="Focus Vault – White Label Productivity Kit" />
+    <img src="images/focus_vault.jpg" alt="Focus Vault – White Label Productivity Kit" />
     <h3>Focus Vault – White Label Productivity Kit</h3>
     <p>Editable kit to launch your own productivity system. Canva slides + resale license included.</p>
     <a href="https://grafixartistry6.gumroad.com/l/xlbheu?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $49</a>
@@ -248,7 +248,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #8e44ad;">🧰 Bundle</div>
-    <img src="images/clarity_master_600x400.webp" alt="Clarity Master Bundle" />
+    <img src="images/clarity_master_600x400.jpg" alt="Clarity Master Bundle" />
     <h3>Clarity Master Bundle</h3>
     <p>Everything you need to reset, refocus, and reclaim your attention.</p>
     <a href="https://grafixartistry6.gumroad.com/l/gxpksf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">A Bargin at $99</a>
@@ -256,7 +256,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #27ae60;">🎯 Creator Favorite</div>
-    <img src="images/calm_clarity.png" alt="Calm Clarity Kit – 7-Day Edition" />
+    <img src="images/calm_clarity.jpg" alt="Calm Clarity Kit – 7-Day Edition" />
     <h3>Calm Clarity Kit – 7-Day Edition</h3>
     <p>Mini-reset kit to realign your day. Includes printable planner, audio prompts, and toolkit.</p>
     <a href="https://grafixartistry6.gumroad.com/l/nupwf?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Get it for $15</a>
@@ -264,7 +264,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #f39c12;">🚀 Launch Special</div>
-    <img src="images/work_life_600x400.webp" alt="Work-Life Integration Mastery" />
+    <img src="images/work_life_600x400.jpg" alt="Work-Life Integration Mastery" />
     <h3>Work-Life Integration Mastery</h3>
     <p>End burnout before it begins. Strategic guide to align your work with your life — sustainably.</p>
     <a href="https://grafixartistry6.gumroad.com/l/lapqw?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Now $9</a>
@@ -272,7 +272,7 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-    <img src="images/hustlemode.webp" alt="HustleMode Command Center" />
+    <img src="images/hustlemode.jpg" alt="HustleMode Command Center" />
     <h3>HustleMode Command Center</h3>
     <p>All-in-one Notion dashboard to launch, track, and grow your side hustle or digital product empire.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jfkdn?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome
@@ -281,14 +281,14 @@
 
   <div class="product-card">
     <div style="text-align: left; font-weight: bold; color: #c0392b;">🔥 Top Seller</div>
-    <img src="images/launch_n_earn_600x400.png" alt="Launch & Earn Combo Pack" />
+    <img src="images/launch_n_earn_600x400.jpg" alt="Launch & Earn Combo Pack" />
     <h3>Launch & Earn Combo Pack</h3>
     <p>Everything you need to go from idea to income — two full products bundled into one power pack.</p>
     <a href="https://grafixartistry6.gumroad.com/l/jqzdtq?utm_source=substack&utm_medium=email&utm_campaign=vault_welcome" class="cta-button">Combo Deal – $43</a>
   </div>
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #16a085;">🧰 Bundle</div>
-  <img src="images/momentum-toolkit.png" alt="Momentum Mapping Toolkit" />
+  <img src="images/momentum-toolkit.jpg" alt="Momentum Mapping Toolkit" />
   <h3>Momentum Mapping Toolkit</h3>
   <p>Visual goal-tracking system to help creators build rhythm and finish what matters.</p>
   <a href="https://grafixartistry6.gumroad.com/l/npruu" class="cta-button">Only $19</a>
@@ -296,7 +296,7 @@
 
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #3498db;">🆓 Freebie</div>
-  <img src="images/7_day_reset.png" alt="7-Day Focus Reset Kit" />
+  <img src="images/7_day_reset.jpg" alt="7-Day Focus Reset Kit" />
   <h3>7-Day Focus Reset Kit</h3>
   <p>A free digital reset designed to help you reclaim attention, energy, and clarity in one week.</p>
   <a href="https://grafixartistry6.gumroad.com/l/whkznx" class="cta-button">Download Free</a>
@@ -304,7 +304,7 @@
 
 <div class="product-card">
   <div style="text-align: left; font-weight: bold; color: #8e44ad;">🚀 Launch Special</div>
-  <img src="images/digital_distraction.png" alt="The Digital Distraction Cleanse" />
+  <img src="images/digital_distraction.jpg" alt="The Digital Distraction Cleanse" />
   <h3>The Digital Distraction Cleanse</h3>
   <p>A 7-day guided system to help you reset your focus, clear your digital space, and create a calm rhythm that works in real life — no cold-turkey quitting required.
 
@@ -314,7 +314,7 @@
 
  <!-- AnchorStack Vault Promo Panel -->
   <section style="text-align: center; margin: 2rem 0;">
-    <img src="/images/promo.png"
+    <img src="/images/promo.jpg"
          alt="AnchorStack Vault — Creator Tools Without the Noise"
          style="width: 100%; max-width: 900px; border-radius: 8px;" />
   </section>
@@ -330,7 +330,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_1.png" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
+      <img src="/images/resized_image_1.jpg" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
       <h3>The 30-Day Product Sprint</h3>
       <p>Build a digital product in one month.</p>
       <a href="https://rickyjarnagin.substack.com/subscribe" 
@@ -349,7 +349,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_2.png" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
+      <img src="/images/resized_image_2.jpg" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
       <p>Join the Stack. Earn with every share.</p>
      <a href="https://rickyjarnagin.substack.com/subscribe" 
@@ -377,7 +377,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_3.png" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
+      <img src="/images/resized_image_3.jpg" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
       <h3>The Calm Clarity Blueprint</h3>
       <p>Digital Clarity Kit by Clarity Press.</p>
       <a href="https://rickyjarnagin.substack.com/subscribe" 
