--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+<!-- Favicon (Optional) -->
+<link rel="icon" href="images/favicon.ico" type="image/png" />
+ 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AnchorStack</title>
