Update Founding Affiliate card title, tagline, and styling

--- a/vault.html
+++ b/vault.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--Force Reload -->
+<!--reload now -->
   <!-- SEO & Social Meta Tags -->
 <meta name="description" content="Discover tools, templates, and clarity kits to help creators stay focused and productive. AnchorStack Vault gives you instant access to digital products designed to help you build and grow—without the noise." />
 <meta name="keywords" content="creator tools, digital products, clarity kits, productivity, anchorstack, notion dashboards, hustlemode, reset kits, focus tools, passive income, templates" />
@@ -192,7 +192,7 @@
     <!-- swapped logo -->
     <img src="images/logo.jpg"
          alt="AnchorStack Badge"
-         style="height: 130px; margin-bottom: 1rem;" />
+         style="height: 100px; margin-bottom: 1rem;" />
 
     <h1 style="font-size: 2rem; margin-top: 1rem;">Unlock Your AnchorStack Vault</h1>
     <p style="font-size: 1.2rem; color: #555;">
@@ -351,7 +351,12 @@
       </div>
       <img src="/images/resized_image_2.jpg" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
-      <p>Join the Stack. Earn with every share.</p>
+      <p>✨ Founding Affiliate Program </p> 
+<p>>Become an AnchorStack Insider </p>> 
+<p>>• 💰 20% commission on each sale </p>> 
+<p>>• 🚀 Early access to new tools  </p>>
+<p>>• 🎁 Exclusive affiliate-only freebies  
+</p>
      <a href="https://rickyjarnagin.substack.com/subscribe" 
    data-substack-modal="subscribe" 
    class="cta-button" 
