Update Founding Affiliate card title, tagline, and styling

--- a/vault.html
+++ b/vault.html
@@ -352,10 +352,10 @@
       <img src="/images/resized_image_2.jpg" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
       <p>✨ Founding Affiliate Program </p> 
-<p>>Become an AnchorStack Insider </p>> 
-<p>>• 💰 20% commission on each sale </p>> 
-<p>>• 🚀 Early access to new tools  </p>>
-<p>>• 🎁 Exclusive affiliate-only freebies  
+<p>Become an AnchorStack Insider </p> 
+<p>• 💰 20% commission on each sale </p> 
+<p>• 🚀 Early access to new tools  </p>
+<p>• 🎁 Exclusive affiliate-only freebies  
 </p>
      <a href="https://rickyjarnagin.substack.com/subscribe" 
    data-substack-modal="subscribe" 
