--- a/vault.html
+++ b/vault.html
@@ -190,7 +190,7 @@
   <!-- Hero Section -->
   <section class="hero-section">
     <!-- swapped logo -->
-    <img src="images/logo.jpg"
+    <img src="images/logo.png"
          alt="AnchorStack Badge"
          style="height: 100px; margin-bottom: 1rem;" />
 
