--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <header>
-<!-- Force -->>
+<!-- Force -->
     <img src="/images/logo.png" alt="AnchorStack Logo" />
   </header>
 <p><img src="/images/Mom.jpg" alt="I LOVE YOU MOM!"/>
