--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 </head>
 <body>
   <header>
-<!-- Force -->
+
     <img src="/images/logo.png" alt="AnchorStack Logo" />
   </header>
-<p><img src="/images/Mom.jpg" alt="I LOVE YOU MOM!"/>
+<p><img src="/images/Mom.jpg" alt="I LOVE YOU MOM!"/></p>
   <h1>AnchorStack</h1>
   <p class="subtitle">Clarity Kits & Momentum Tools for Creators</p>
   <p class="body-text">
