--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     width: 100%;
     height: auto;
     margin: 1.5rem auto 2rem;
-    animation: fadeIn 3s ease-in-out;
+    animation: heartbeat 2.5s ease-in-out;
     display: block;
     border-radius: 10px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
